--- a/app/public/app.scss
+++ b/app/public/app.scss
@@ -25,8 +25,6 @@ $fa-font-path: "~font-awesome/fonts";
 // Main
 
 body {
-  color:white;
+  color:black;
   font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
-  text-shadow: 0px 1px 3px rgba(0,0,0,0.5);
-  background-color:rgba(0,0,0,0.25);
 }
